# delivery-ops-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/python/: SKILL.md
.claude/skills/delivery-ops-work-order/: SKILL.md
.cursor/rules/: project-standards.mdc
.cursor/skills/delivery-ops-architecture/: SKILL.md
.cursor/skills/delivery-ops-quality-gate/: SKILL.md
docs/agent-skills/: delivery-ops-architecture.md  delivery-ops-quality-gate.md  delivery-ops-work-order.md
docs/architecture/: project-structure.md
docs/implementation/: phase-01-detailed-plan.md  phase-01-foundation.md  phase-02-bugfix-readonly-mvp.md  phase-02-detailed-plan.md  phase-03-detailed-plan.md  phase-03-feature-readonly-mvp.md  phase-04-executor.md  phase-05-quality-gate.md  phase-06-case-library-evals.md
examples/: direct_invoke_demo.py
src/delivery_ops/application/: ingress_service.py  intent_router.py  report_publisher.py  system_handler.py  workflow_router.py
src/delivery_ops/config/: settings.py
src/delivery_ops/domain/: bugfix.py  features.py  intents.py  messages.py  ports.py  reports.py  tasks.py
src/delivery_ops/storage/: in_memory_bug_fix_session.py  in_memory_feature_session.py  in_memory_task_store.py
tests/: conftest.py
tests/contract/bug_sources/: test_fake_bug_source.py
tests/contract/requirements/: test_fake_requirement_source.py
tests/integration/: test_bugfix_readonly_flow.py  test_direct_invocation_flow.py  test_feature_readonly_flow.py
tests/unit/application/: test_intent_router.py  test_report_publisher.py  (+1 more)
(+42 files in other folders)
